trying to solve mobile submenu not showing

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -125,7 +125,7 @@ li a:active{
   .dropdown-submenu:hover>.dropdown-menu {
     display: block;
   }
-  .dropdown-submenu:focus>.dropdown-menu {
+  .dropdown-submenu>a:focus>.dropdown-menu {
     display: block;
   }
 
